--- a/index.html
+++ b/index.html
@@ -23,71 +23,15 @@
 			</div>
 		</div>
 		<div id="setup">
-			<script type="text/javascript">
-				if (window.File && window.FileReader && window.Blob) {
-					//good
-				} else {
-					alert('File API not supported. Please use a different browser.')
-				}
-			</script>
-			<script type="text/javascript">
-				var setup = document.getElementById("setup");
-
-				var screenCountNode = document.createElement("ul");
-				for (var i = 1; i < 10; i++){
-					var li = document.createElement("li");
-					var button = document.createElement("button");
-					screenCountNode.appendChild(li);
-					li.appendChild(button);
-					button.appendChild(document.createTextNode(i));
-					buttonSet(button, i);
-				}
-				setup.appendChild(screenCountNode);
-
-				function buttonSet(button, num){
-					button.addEventListener("click", function(){screenSettings(num);});
-				}
-
-				function screenSettings(count) {
-					var screenSettings = document.getElementById("screenSettings");
-					var screenCountOld = screenSettings.getAttribute("data-screencount");
-					
-					while(count>screenCountOld){
-						screenCountOld++;
-						addScreen(screenSettings,screenCountOld);
-					}
-					while(count<screenCountOld){
-						screenCountOld--;
-						removeScreen();
-					}
-
-					screenSettings.setAttribute("data-screencount", count);
-				}
-
-				function addScreen(screenSettings,count){
-					var newScreen = document.createElement("div");
-					newScreen.setAttribute("class","screen");
-					var screenId = "screen" + count;
-					newScreen.setAttribute("id",screenId);
-
-					screenSettings.appendChild(newScreen);
-				}
-
-				function removeScreen(screenSettings){
-
-				}
-
-			</script>
-			<div id="screenSettings" data-screencount="1">
-				<div class="screen" id="screen1">
-
-				</div>
-			</div>
+			<div id="screenSettings" data-screencount="0"></div>
+			<script src="javascript/setup.js" type="text/javascript"></script>
 		</div>
 		<div id="upload">
 			<input name="upload" type="file" accept=".jpg,.png">
 		</div>
+		<div id="preview">
 
+		</div>
 	</div>
 
 </body>
